Added Product Numbers and PDF build
Updated PCR protocol with product numbers, and pushed PDF build

--- a/16S_rRNA_twostep_PCR.tex
+++ b/16S_rRNA_twostep_PCR.tex
@@ -28,7 +28,7 @@
 
 \section{Introduction}
 
-This protocol assumes that you have extracted DNA and quantified it using the Qubit. The reagents used in this protocol are supplied by Kapa Biosystems (Kapa HotStart Taq and associated reagents; product number XXXXX).
+This protocol assumes that you have extracted DNA and quantified it using the Qubit. The reagents used in this protocol are supplied by Kapa Biosystems (Kapa 2G Robust HS PCR Kit with dNTPs; product number KK5518).
 
 \section{Protocol}
 
@@ -77,7 +77,7 @@ The reaction can be placed at -20$^{\circ}$C at this stage if needed.
 
 \subsection{Ampure Bead Purification of PCR-A}
 
-The purpose of this step is to clean up the amplified DNA and remove leftover PCR reagents such as free nucleotides, primers, and the Taq polymerase. We will be using Ampure magnetic beads that bind to DNA (XXX company; product number XXXX). Include the negative control in this purfication step. Steps in \textbf{BOLD} take place in the magnetic adaptor:
+The purpose of this step is to clean up the amplified DNA and remove leftover PCR reagents such as free nucleotides, primers, and the Taq polymerase. We will be using Ampure magnetic beads that bind to DNA (Agricourt Ampure XP beads; product number A63880). Include the negative control in this purfication step. Steps in \textbf{BOLD} take place in the magnetic adaptor:
 
 \begin{enumerate}
 \item Add 1 volume of Ampure beads (at room temperature and vortexed) to 1 volume of sample (25\unit{}{\micro}l)
